Try to add  pdo support
Signed-off-by: Arbuzov Sergey <info@whitediver.com>

--- a/phing/README
+++ b/phing/README
@@ -19,6 +19,7 @@ Phing build.xml example:
                 config_file="config.ini"
                 action="migrate"
                 action_options="now"
+                driver="mysqli"
             />
     </target>
 </project>
